The 'Rules' button is working now. Bug in 'Color' button was resolved.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
                 <button class="btn-hold"><i class="material-icons">backup</i>Hold</button>
                 <img src="img/dice-blue-1.png" alt="Dice" class="dice">
             </div>
+            <div class="rules">
+                <div class="rules-title">GAME RULES:</div>
+                <div class="rules-content">
+                    <ol>
+                        <li>The game has 2 players, playing in rounds</li>
+                        <li>In each turn, a player rolls a dice as many times as he whishes. Each result get added to his ROUND score</li>
+                        <li>BUT, if the player rolls a 1, all his ROUND score gets lost. After that, it's the next player's turn</li>
+                        <li>The player can choose to 'Hold', which means that his ROUND score gets added to his GLBAL score. After that, it's the next player's turn</li>
+                        <li>The first player to reach 100 points on GLOBAL score wins the game</li>
+                    </ol>
+                </div>
+            </div>
         </div>
         <script src="app.js"></script>
     </body>
